# coin-assistant

./: .flake8  manage.py  pyproject.toml  readme.md  setup.cfg
.github/workflows/: ci.yml  darker.yml
config/: .env.example
docs/: api_schema.yaml  models.drawio  schema.yaml
docs/schemas/: budget.yaml  goals.yaml  operations.yaml  purchases.yaml
server/: asgi.py  settings.py  urls.py  wsgi.py
server/app/base/: adapters.py  authentication.py  exceptions.py  services.py
server/app/goals/: admin.py  apis.py  apps.py  enums.py  models.py  serializers.py  services.py  urls.py
server/app/goals/migrations/: 0001_initial.py  0002_goal_category_goal_description_goal_finish_date_and_more.py  0003_alter_goal_goal_type_alter_goal_rule.py  0004_alter_goal_rule_remove_goal_user_goal_user.py  0005_alter_goal_category_alter_goal_description_and_more.py
server/app/operations/: admin.py  apis.py  apps.py  dataclasses.py  enums.py  models.py  serializers.py  services.py  urls.py  validation.py
server/app/operations/apis/: __init__.py  balance.py  category.py  operation.py
server/app/operations/migrations/: 0001_initial.py  0002_remove_operation_category_alter_operation_user_and_more.py  0003_alter_operation_cost.py  0004_alter_operation_category_alter_operation_description.py
server/app/purchases/: admin.py  apps.py  models.py
server/app/purchases/migrations/: 0001_initial.py
server/app/users/: apps.py  receivers.py
server/settings/: __init__.py
server/settings/components/: common.py  rest_framework.py
server/settings/environments/: development.py
tests/: utils.py
tests/factories/: category.py  goals.py  operations.py  user.py
tests/test_apis/: conftest.py  test_balance.py  test_budgets.py  test_categories.py  test_goals.py  test_operations.py
tests/test_managers/: test_goals.py
tests/test_services/: test_balance.py  test_budgets.py  test_categories.py  test_goals.py  test_operations.py
tests/test_signals/: test_users.py
tests/unittests/managers/: goals.py
